tests/parser/invalidinput/multidecl2.idp
#include <mx>

vocabulary V{
	P Q
}